# snark

./: CMakeLists.txt
point_cloud/: CMakeLists.txt  detect_change.cpp  detect_change.h
point_cloud/applications/: points-detect-change.cpp
point_cloud/python/: CMakeLists.txt  detect-change.cpp  example.py  py_detect_change.cpp  py_detect_change.h  py_partition.cpp  py_partition.h  py_point_cloud.cpp
